Landing Image CSS fix, now there's no horizontal scroll bar on main view.

--- a/src/styles/_landing.sass
+++ b/src/styles/_landing.sass
@@ -17,12 +17,12 @@
     width: 40%
 
 .landing-image
-  width: 100vw
+  // width: 100vw
   height: 700px
   position: relative
-  left: 50%
-  right: 50%
-  margin-left: -50vw
+  // left: 50%
+  // right: 50%
+  // margin-left: -50vw
   // margin: 3em -50vw
   background-size: cover
   background-position: center
